text align fix

--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -24,6 +24,7 @@
     flex-direction: column;
     align-items: center;
     width: 60%;
+    text-align: center;
 }
 
 .about-img {
@@ -32,19 +33,20 @@
 }
 
 .git-link {
-    padding: 10px 1rem;
-    background-color: #D7C0AE;
-    font-size: 2rem;
+    margin-top: 1rem;
+    padding: 1.25rem 1.5rem;
+    background-color: #ECE3CE;
+    font-size: 3rem;
     color: black;
+    border: solid 2px #3A4D39;
     text-decoration: none;
-    border: 1px solid #967E76;
-    border-radius: 20px;
+    border-radius: 10px;
 }
 
 .git-link:hover {
-    background-color: #967E76;
+    background-color: #3A4D39;
     color: white;
-    transition: all 200ms linear;
+    transition: all 150ms linear;
 }
 
 @media (max-width: 1000px) {
